--- a/login.html
+++ b/login.html
@@ -4,5 +4,7 @@
   </head>
   <body>
     <h1>login here</h1>
+    <label>username</label>
+    <inputtype="text" placeholder="username">
   </body>
 </html>
