--- a/login.html
+++ b/login.html
@@ -6,5 +6,6 @@
     <h1>login here</h1>
     <label>username</label>
     <inputtype="text" placeholder="username">
+      <label>password</label>
   </body>
 </html>
