--- a/login.html
+++ b/login.html
@@ -7,5 +7,6 @@
     <label>username</label>
     <inputtype="text" placeholder="username">
       <label>password</label>
+      <inputtype="password" placeholder="username">
   </body>
 </html>
